--- a/index.ipynb
+++ b/index.ipynb
@@ -133,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks= 5 # 5"
+    "number_of_weeks= \"5\" # 5"
    ]
   },
   {
